feat: Custom exeption, improve error responses, round price
