# src/main/java/it/montano/sqlvsnosql/common/exeption/ErrorResponse.java
@@ -1,11 +1,0 @@
-package it.montano.sqlvsnosql.common.exeption;
-
-import java.time.LocalDateTime;
-
-public record ErrorResponse(
-        int status,
-        String error,
-        String message,
-        String path,
-        LocalDateTime timestamp
-) {}
